# QuickLeeg

./: README.md  __about__.py  abbreviation_checker.py  leeg.py  pyproject.toml  setup.py
quick_leeg/: __about__.py  leeg.py
